Partial_14Dec2021/force-app/main/default/objects/PromotionExpenseTable__c/PromotionExpenseTable__c.object-meta.xml
<CustomObject>
    <description>to use in promotion page .</description>
    <label>PromotionExpenseTable</label>
    <nameField>
        <label>PromotionExpenseTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PromotionExpenseTables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>