Partial_14Dec2021/force-app/main/default/objects/PromotionExpenseTable__c/fields/APPL_Share__c.field-meta.xml
<CustomField>
    <fullName>APPL_Share__c</fullName>
    <label>APPL Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>