Partial_14Dec2021/force-app/main/default/objects/PromotionExpenseTable__c/fields/Nature_of_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Expenditure__c</fullName>
    <label>Nature of Expenditure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cocktail Expenses</fullName>
            </value>
            <value>
                <fullName>Event Manager</fullName>
            </value>
            <value>
                <fullName>Food Expenses</fullName>
            </value>
            <value>
                <fullName>Gift Expenses</fullName>
            </value>
            <value>
                <fullName>Hall Rent Expenses</fullName>
            </value>
            <value>
                <fullName>Hotel Expenses</fullName>
            </value>
            <value>
                <fullName>Invitation Card &amp; Printing and stationary</fullName>
            </value>
            <value>
                <fullName>Projector and Sound system</fullName>
            </value>
            <value>
                <fullName>Travels expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>