Partial_14Dec2021/force-app/main/default/objects/PromotionExpenseTable__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <description>look up to promotions</description>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>PromotionExpenseTables</relationshipLabel>
    <relationshipName>PromotionExpenseTables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>