Partial_14Dec2021/force-app/main/default/objects/PromotionExpenseTable__c/fields/RecordEdit__c.field-meta.xml
<CustomField>
    <fullName>RecordEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RecordEdit</label>
    <type>Checkbox</type>
</CustomField>